--- a/index.html
+++ b/index.html
@@ -3,16 +3,20 @@
 <head>
 	<meta charset="UTF-8">
 	<title>about me</title>
+	<link rel="stylesheet" type="text/css" href="styles.css">
 </head>
+<body>
 <header>
-<h1>ABOUT ME</h1>
+	<h1>ABOUT ME</h1>
 </header>
+
 <img src="https://d30womf5coomej.cloudfront.net/ua/67/a02ce38a-94ff-4f03-9ed1-7cd1e41944b6.jpg" alt="Captain Voltage">
 <br>
 <ul>Check out <a href="https://tapas.io/series/SashaRuinsEverything"> my website! </a></ul>
 <ul>Or you can <a href="mailto:ampsternetwork@gmail.com">contact me</a></ul>
 <ul>Please</ul>
 <ul>I'm very lonely</ul>
+
 <p class="bees">
 According to all known laws
 of aviation,
@@ -4578,20 +4582,5 @@ Wrap it up, guys.
 I had virtually no rehearsal for that.
 </p>
 
-<body>
 </body>
-<style>
-body {
-	text-align: center;
-	background-color: #f2d45e;
-}
-p.bees {
-	font-family: "Verdana";
-	font-size: 300%;
-	font-weight: bolder;
-}
-ul {
-	font-family: "Lucida Grande";
-	font-size: 125%;
-}
 </html>
